Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <a id="introduction-video" class="anchor" href="#introduction-video" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://www.youtube.com/watch?v=SGQ_72U4QzU">Introduction Video</a>
 </h2>
 
+<p><a href="https://www.youtube.com/watch?v=SGQ_72U4QzU" target="_blank"><img src="http://img.youtube.com/vi/https://youtu.be/SGQ_72U4QzU/0.jpg" alt="Introduction Video" width="240" height="180" border="10"></a></p>
+
 <h2>
 <a id="demo-video" class="anchor" href="#demo-video" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://www.youtube.com/watch?v=zeJK4dATe5k">Demo Video</a>
 </h2>
