--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <h2>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 
-<p><img src="https://drive.google.com/file/d/0B6g_bGHuMytPZUZieldGZ2pseU0/view?usp=sharing" alt="Welcome Screen"></p>
+<p><img src="https://doc-0k-74-docs.googleusercontent.com/docs/securesc/r7pct9s2v7tnlp0piv97ol498h95vthc/kn9to8fqbcri0sargeifkb11pq1mc108/1447826400000/08827573221700438135/08827573221700438135/0B6g_bGHuMytPTVNnRHBHUWNCRU0?e=download" alt="Welcome Screen"></p>
         </section>
 
         <footer>
