--- a/index.html
+++ b/index.html
@@ -37,18 +37,6 @@
 <p>Alert is an Android Application which can be used as Emergency tool to Alert Peoples close to you when you are in danger or feeling unsafe.</p>
 
 <h2>
-<a id="introduction-video" class="anchor" href="#introduction-video" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://www.youtube.com/watch?v=SGQ_72U4QzU">Introduction Video</a>
-</h2>
-
-<p><a href="https://www.youtube.com/watch?v=SGQ_72U4QzU" target="_blank"><img src="http://img.youtube.com/vi/SGQ_72U4QzU/0.jpg" alt="Introduction Video" width="240" height="180" border="10"></a></p>
-
-<h2>
-<a id="demo-video" class="anchor" href="#demo-video" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://www.youtube.com/watch?v=zeJK4dATe5k">Demo Video</a>
-</h2>
-
-<p><a href="https://www.youtube.com/watch?v=zeJK4dATe5k" target="_blank"><img src="http://img.youtube.com/vi/zeJK4dATe5k/0.jpg" alt="Demo Video" width="240" height="180" border="10"></a></p>
-
-<h2>
 <a id="it-has-three-ways-to-alert" class="anchor" href="#it-has-three-ways-to-alert" aria-hidden="true"><span class="octicon octicon-link"></span></a>It has three ways to Alert:</h2>
 
 <h3>
@@ -67,6 +55,16 @@
 <p>It takes users current location and finds nearest Police Station to the user and make a direct call for you with just a single touch and if it fails to find the station number it will call 100.</p>
 
 <p>Alert can be used in Women's safety, in road accidents and ultimately to save someone's life.</p>
+
+<h2>
+<a id="introduction-video" class="anchor" href="#introduction-video" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction Video</h2>
+
+<p><a href="https://www.youtube.com/watch?v=SGQ_72U4QzU" target="_blank"><img src="http://img.youtube.com/vi/SGQ_72U4QzU/0.jpg" alt="Introduction Video" width="240" height="180" border="10"></a></p>
+
+<h2>
+<a id="demo-video" class="anchor" href="#demo-video" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo Video</h2>
+
+<p><a href="https://www.youtube.com/watch?v=zeJK4dATe5k" target="_blank"><img src="http://img.youtube.com/vi/zeJK4dATe5k/0.jpg" alt="Demo Video" width="240" height="180" border="10"></a></p>
 
 <h2>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h2>
