Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 
 <p><img src="https://doc-0k-74-docs.googleusercontent.com/docs/securesc/r7pct9s2v7tnlp0piv97ol498h95vthc/kn9to8fqbcri0sargeifkb11pq1mc108/1447826400000/08827573221700438135/08827573221700438135/0B6g_bGHuMytPTVNnRHBHUWNCRU0?e=download" alt="Welcome Screen"></p>
+
+<h2>
+<a id="achievements" class="anchor" href="#achievements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Achievements</h2>
+
+<ul>
+<li>8th Rank in <a href="https://www.hackerearth.com/sprints/urban-hack/">NASSCOM Urban Hack Competition.</a> </li>
+<li>1st price in Software Development Competition, Karandak’15, Sinhgad Lonavala, Pune.</li>
+<li>2nd price in Software Development Competition, MindSpark’14, CoEP, Pune</li>
+</ul>
         </section>
 
         <footer>
