--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <hr>
 
         <section id="main_content">
-          <h1>
+          <p><img src="https://doc-10-74-docs.googleusercontent.com/docs/securesc/r7pct9s2v7tnlp0piv97ol498h95vthc/2sl2nrtr8f3l2pliikip5ss3d5c38lua/1447826400000/08827573221700438135/08827573221700438135/0B6g_bGHuMytPU2o5OFZ2bXlLTTQ?e=download" alt="LinkedIn Profile"></p>
+
+<h1>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description:</h1>
 
 <p>Alert is an Android Application which can be used as Emergency tool to Alert Peoples close to you when you are in danger or feeling unsafe.</p>
@@ -83,8 +85,7 @@
 <h2>
 <a id="author" class="anchor" href="#author" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author</h2>
 
-<p>Akshay Kale
-<img src="https://doc-10-74-docs.googleusercontent.com/docs/securesc/r7pct9s2v7tnlp0piv97ol498h95vthc/2sl2nrtr8f3l2pliikip5ss3d5c38lua/1447826400000/08827573221700438135/08827573221700438135/0B6g_bGHuMytPU2o5OFZ2bXlLTTQ?e=download" alt="LinkedIn Profile"></p>
+<p>Akshay Kale</p>
         </section>
 
         <footer>
