Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <p><a href="https://in.linkedin.com/in/kaleakshay" target="_blank"><img src="https://doc-10-74-docs.googleusercontent.com/docs/securesc/r7pct9s2v7tnlp0piv97ol498h95vthc/2sl2nrtr8f3l2pliikip5ss3d5c38lua/1447826400000/08827573221700438135/08827573221700438135/0B6g_bGHuMytPU2o5OFZ2bXlLTTQ?e=download" alt="LinkedIn Profile" width="240" height="80"></a></p>
+          <p><a href="https://in.linkedin.com/in/kaleakshay" target="_blank"><img src="https://doc-10-74-docs.googleusercontent.com/docs/securesc/r7pct9s2v7tnlp0piv97ol498h95vthc/2sl2nrtr8f3l2pliikip5ss3d5c38lua/1447826400000/08827573221700438135/08827573221700438135/0B6g_bGHuMytPU2o5OFZ2bXlLTTQ?e=download" alt="LinkedIn Profile" width="240" height="80" border="0"></a></p>
 
 <h1>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description:</h1>
