Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <p><a href="https://in.linkedin.com/in/kaleakshay" target="_blank"><img src="https://goo.gl/photos/bUGHUqHhjsaQ2zex6" alt="LinkedIn Profile" width="240" height="80" border="0"></a></p>
+          <p><a href="https://in.linkedin.com/in/kaleakshay" target="_blank"><img src="https://lh3.googleusercontent.com/8dP2W5TBYyp_peDR1F2nYoY6JcKvC_sC-cmzVVsx2XnRHPgmTI9EI16owFnhct8w0t5V3YdVcxNWyHqQFXp1x2gVOtjJpsVRoTu43nCWDostEXAHyVTFDZLNciWs08og6wCK5gXsjnzq_FM2E_EscsbzGH3g2dYUtBIvmQw6bxovXsF1KgaL3QczB-rnQm569kXp-KKBeM3hUywy9UMcwQNouGikSk1BxrKC9jMztDd-Ojn6d4o67azVB5I7mVvK4Jrq0tVNDI81UL_hZ3NnnwA0Tbk5wqye1U-9A4qSTebjLwO9niG2OKsWW9BOKQ_S7qOC7M69UIdtMm0GnOX8dSplzILgg2ZbFueIwqSxJTHnx-DSDW_Hor70O_mMItYOaBbHsNR6uXvTObO9lqhsghL0OshYGC3TE2EfGMH7kmle-CcUYPkRpFKgxY5G-Z3-ulUi5HZosBOnIXyYqNCLXB-RIOZ6fBtKKad5vn7AIQPuoDhckk-NrSt8QsFrnN1jK-rMxfeAvJCYWFV7-Lbr7zsf-M0ylgliuqQ41SlyiWc=w300-h100-no" alt="LinkedIn Profile" width="240" height="80" border="0"></a></p>
 
 <h1>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description:</h1>
