Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <h2>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 
-<p><img src="https://doc-0k-74-docs.googleusercontent.com/docs/securesc/r7pct9s2v7tnlp0piv97ol498h95vthc/kn9to8fqbcri0sargeifkb11pq1mc108/1447826400000/08827573221700438135/08827573221700438135/0B6g_bGHuMytPTVNnRHBHUWNCRU0?e=download" alt="Welcome Screen"></p>
+<p><img src="https://lh3.googleusercontent.com/flAWl1U1QycJHy186nHv4snPuHIhTi7SskDxu5QolboucOGkZugeGDxj-qEDN5yTbtqZHsJjZCKc-RFhy0WUe8j2n8Xna4i4EUP2FSxb2gOOGSg5HDPidwsegrNJl4DjtaVYP-3-mCZM2Eje1hIe5MvYesNVXyq_X6DHL_v0vRh9ybfBZyHF0_2kk_7zo1kGLpWtvrSSynJo4vjhNixZbVqIiMIKEc5u2th1QZjlx9iQJwbIcEgrCn42PvQ1CYb7EXfRIicBI7ijN4j_kkTNcGryrVAKh7nEpHIy4K0Z619ovZsL4Tq28Hn5ib5E5xACTgEhTq45y6ouse0PkgNtUnE1L8UsbWArpMMKvZF5eho3zeJX0xp3BmUVIqp1jzYDlKm8ddNr9woG86rPaVXydbokaN1i5-aId3nllDc_AneuMUDITsAoO6cblCUvc-M4ha8UtWDdUk9hPUzNYJ7bHp-edCVvR_5wLe8GK9vFfrYZzFCpGu3UdvTpg5q6umRK-QpvJYRQyfPScYfE3hZ3yXlFU2LIN78GTk99sJbOlmc=w1139-h805-no" alt="Welcome Screen"></p>
 
 <h2>
 <a id="achievements" class="anchor" href="#achievements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Achievements</h2>
